--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
+  "homepage": "http://antimatter15.com/derp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
