--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.4"
+    "react-scripts": "^0.8.5"
   },
   "dependencies": {
     "codemirror": "^5.22.0",
     "diff": "^3.1.0",
     "diff-match-patch": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^15.4.1",
+    "react-flip-move": "^2.7.4"
   },
   "homepage": "http://antimatter15.com/derp/build",
   "scripts": {
