revisiting this idea two years later

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "diff": "^3.1.0",
     "diff-match-patch": "^1.0.0",
     "font-awesome": "^4.7.0",
-    "react": "^15.4.1",
+    "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-color": "^2.11.1",
+    "react-designer": "https://github.com/antimatter15/react-designer",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.4.2",
     "react-flip-move": "^2.7.4"
   },
   "homepage": "http://antimatter15.com/derp/build",
