--- a/package.json
+++ b/package.json
@@ -3,27 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^0.8.5"
+    "react-scripts": "^2.1.3"
   },
   "dependencies": {
-    "codemirror": "^5.22.0",
-    "diff": "^3.1.0",
-    "diff-match-patch": "^1.0.0",
+    "codemirror": "^5.42.2",
+    "diff": "^4.0.1",
+    "diff-match-patch": "^1.0.4",
     "font-awesome": "^4.7.0",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-color": "^2.11.1",
+    "react": "^16.7.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-color": "^2.17.0",
     "react-designer": "https://github.com/antimatter15/react-designer",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.4.2",
-    "react-flip-move": "^2.7.4"
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
+    "react-dom": "^16.7.0",
+    "react-flip-move": "^3.0.3"
   },
-  "homepage": "http://antimatter15.com/derp/build",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
